@@ -55,6 +55,7 @@
     <ClInclude Include="scripting\CustomMenu.h" />
     <ClInclude Include="scripting\CustomWindow.h" />
     <ClInclude Include="scripting\ScGraphicsContext.hpp" />
+    <ClInclude Include="scripting\ScImageManager.hpp" />
     <ClInclude Include="scripting\ScTileSelection.hpp" />
     <ClInclude Include="scripting\ScTitleSequence.hpp" />
     <ClInclude Include="scripting\ScUi.hpp" />
