@@ -525,11 +525,6 @@ const rct_g1_element* gfx_get_g1_element(ImageId imageId);
 const rct_g1_element* gfx_get_g1_element(ImageIndex image_id);
 void gfx_set_g1_element(ImageIndex imageId, const rct_g1_element* g1);
 bool is_csg_loaded();
-uint32_t gfx_object_allocate_images(const rct_g1_element* images, uint32_t count);
-void gfx_object_free_images(uint32_t baseImageId, uint32_t count);
-void gfx_object_check_all_images_freed();
-size_t ImageListGetUsedCount();
-size_t ImageListGetMaximum();
 void FASTCALL gfx_sprite_to_buffer(rct_drawpixelinfo& dpi, const DrawSpriteArgs& args);
 void FASTCALL gfx_bmp_sprite_to_buffer(rct_drawpixelinfo& dpi, const DrawSpriteArgs& args);
 void FASTCALL gfx_rle_sprite_to_buffer(rct_drawpixelinfo& dpi, const DrawSpriteArgs& args);
